<resources>
    <string name="app_name">PruebaSucursales</string>
    <string name="title_activity_maps">Map</string>

    <string name="usuario">Usuario</string>
    <string name="password">Password</string>}
    <string name="login">Acceder</string>
    <string name="success">Listo</string>
    <string name="loading">Espera</string>
    <string name="buscar">Buscar Sucursales</string>
</resources>
